# vad_plus

./: .metadata  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  vad_plus_jni.cpp
android/src/main/kotlin/dev/miracle/vad_plus/: VadPlusFFI.kt  VadPlusInitProvider.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/miracle/vad_plus_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner/: Info.plist  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: vad_plus.podspec
ios/Classes/: VadPlusFFI.swift  vad_plus.c
lib/: vad_plus.dart  vad_plus_bindings_generated.dart
macos/: vad_plus.podspec
macos/Classes/: VadPlusFFI.swift
src/: CMakeLists.txt  vad_plus.c  vad_plus.h
